{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 24,
  "lineage": "e8b04f20-305f-3194-cf0b-3a5448073a62",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prime-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:837871266553:internet-gateway/igw-0f9aacccd6344d3d6",
            "id": "igw-0f9aacccd6344d3d6",
            "owner_id": "837871266553",
            "tags": {
              "Name": "prime-igw"
            },
            "tags_all": {
              "Name": "prime-igw"
            },
            "vpc_id": "vpc-018caec6ba5f53977"
          },
          "dependencies": [
            "aws_vpc.prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prime-priv-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:837871266553:route-table/rtb-031305a52d1077d22",
            "id": "rtb-031305a52d1077d22",
            "owner_id": "837871266553",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "prime-private-rt"
            },
            "tags_all": {
              "Name": "prime-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-018caec6ba5f53977"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prime-pub-route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:837871266553:route-table/rtb-090560daac0c5a256",
            "id": "rtb-090560daac0c5a256",
            "owner_id": "837871266553",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f9aacccd6344d3d6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "prime-pub-route_table"
            },
            "tags_all": {
              "name": "prime-pub-route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-018caec6ba5f53977"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.prime-igw",
            "aws_vpc.prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prime-priv1-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-028557daca8850e07",
            "route_table_id": "rtb-031305a52d1077d22",
            "subnet_id": "subnet-01345829aaf7cf25e"
          },
          "dependencies": [
            "aws_route_table.prime-priv-rt",
            "aws_subnet.prime-priv1",
            "aws_vpc.prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prime-priv2-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea96d0d3a4a8a578",
            "route_table_id": "rtb-031305a52d1077d22",
            "subnet_id": "subnet-0d02b592cc983136c"
          },
          "dependencies": [
            "aws_route_table.prime-priv-rt",
            "aws_subnet.prime-priv2",
            "aws_vpc.prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prime-pub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06391c736e75032d1",
            "route_table_id": "rtb-090560daac0c5a256",
            "subnet_id": "subnet-0809d1da14cfa41eb"
          },
          "dependencies": [
            "aws_internet_gateway.prime-igw",
            "aws_route_table.prime-pub-route_table",
            "aws_subnet.prime-pub1",
            "aws_vpc.prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prime-pub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e0f60ac4cc4d003",
            "route_table_id": "rtb-090560daac0c5a256",
            "subnet_id": "subnet-0f45677a6773f0047"
          },
          "dependencies": [
            "aws_internet_gateway.prime-igw",
            "aws_route_table.prime-pub-route_table",
            "aws_subnet.prime-pub2",
            "aws_vpc.prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prime-priv1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:837871266553:subnet/subnet-01345829aaf7cf25e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01345829aaf7cf25e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "837871266553",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prime-priv1"
            },
            "tags_all": {
              "Name": "prime-priv1"
            },
            "vpc_id": "vpc-018caec6ba5f53977"
          },
          "dependencies": [
            "aws_vpc.prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prime-priv2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:837871266553:subnet/subnet-0d02b592cc983136c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d02b592cc983136c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "837871266553",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prime-priv2"
            },
            "tags_all": {
              "Name": "prime-priv2"
            },
            "vpc_id": "vpc-018caec6ba5f53977"
          },
          "dependencies": [
            "aws_vpc.prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prime-pub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:837871266553:subnet/subnet-0809d1da14cfa41eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0809d1da14cfa41eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "837871266553",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prime-pub1"
            },
            "tags_all": {
              "Name": "prime-pub1"
            },
            "vpc_id": "vpc-018caec6ba5f53977"
          },
          "dependencies": [
            "aws_vpc.prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prime-pub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:837871266553:subnet/subnet-0f45677a6773f0047",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f45677a6773f0047",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "837871266553",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prime-pub2"
            },
            "tags_all": {
              "Name": "prime-pub2"
            },
            "vpc_id": "vpc-018caec6ba5f53977"
          },
          "dependencies": [
            "aws_vpc.prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prime",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:837871266553:vpc/vpc-018caec6ba5f53977",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0734c1c58f7d92c07",
            "default_route_table_id": "rtb-0cb287444cb7ad678",
            "default_security_group_id": "sg-0e56bca584d6409b2",
            "dhcp_options_id": "dopt-0e8fa6428a4c25050",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-018caec6ba5f53977",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cb287444cb7ad678",
            "owner_id": "837871266553",
            "tags": {
              "Name": "prime"
            },
            "tags_all": {
              "Name": "prime"
            }
          }
        }
      ]
    }
  ]
}